[package]
name = "rusty_build_light"
version = "0.1.0"
authors = ["pingzing <mcalistern@gmail.com>"]
build = "build.rs"

[dependencies]
toml = "0.4"
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.8.2"
lazy_static = "1.0"
log4rs = "0.8.0"
log = "0.4.1"
wiringpi = "0.2.4"
hyper = "0.11.12"
chrono = "0.4.0"
ctrlc = { version = "3.0", features = ["termination"] }